--- a/Code/build.gradle
+++ b/Code/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +18,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+        mavenCentral()
         google()
         jcenter()
     }
