--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -19,8 +19,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.myinnos:GiphyImageResultsPreview:1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:27.1.1'
@@ -29,4 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
