--- a/Code/build.gradle
+++ b/Code/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
     }
     dependencies {
+
         classpath 'com.android.tools.build:gradle:3.3.2'
         
 
@@ -23,6 +24,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
