--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -19,10 +19,11 @@ android {
 }
 
 dependencies {
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.myinnos:GiphyImageResultsPreview:1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -31,4 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:recyclerview-v7:27.0.21'
+    implementation 'com.android.support:support-v4:27.0.1'
 }
