--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.android.support:recyclerview-v7:27.0.21'
     implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
