--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     def supportVersion = "28.0.0"
     def glideVersion = "4.9.0"
     def exoPlayerVersion = "2.8.4"
-
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$supportVersion"
@@ -36,16 +35,12 @@ dependencies {
     implementation "com.android.support:support-v4:$supportVersion"
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
     // Recyclerview
     implementation "com.android.support:recyclerview-v7:$supportVersion"
-
     // ExoPlayer
     implementation "com.google.android.exoplayer:exoplayer:$exoPlayerVersion"
-
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
-
-
+    implementation 'com.github.rubensousa:gravitysnaphelper:1.5'
 }
