--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.myinnos:GiphyImageResultsPreview:1.0'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
 }
