--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
     implementation 'com.github.rubensousa:gravitysnaphelper:1.5'
+    // Card view
+    implementation "com.android.support:cardview-v7:$supportVersion"
 }
 
 
