--- a/Code/app/build.gradle
+++ b/Code/app/build.gradle
@@ -9,6 +9,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+            }
+        }
     }
     buildTypes {
         release {
@@ -52,6 +57,10 @@ dependencies {
     implementation 'com.github.rubensousa:gravitysnaphelper:1.5'
     // Card view
     implementation "com.android.support:cardview-v7:$supportVersion"
+    implementation 'com.mcxiaoke.volley:library:1.0.+'
+    implementation 'io.realm:realm-android:0.82.1'
+    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.wang.avi:library:2.1.3'
 }
 
 
