--- a/Code/gradle/wrapper/gradle-wrapper.properties
+++ b/Code/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Aug 30 22:35:08 GMT+07:00 2019
+#Wed Sep 04 23:55:12 ICT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
