--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -9,18 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
-        <activity android:name=".Activity.ProfileUser_Activity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Activity.Activity_ProfileUser" />
-=======
-<<<<<<< HEAD
-        <activity android:name=".Activity.ProfileUser_Activity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Activity.Activity_ProfileUser" />
-=======
->>>>>>> beefe2283a34784b2a1f08cdbc25c03d40cfed40
->>>>>>> df31fef4cf55d8603a8b118f4fd747e8302e3f4f
+
+        <activity
+            android:name=".Activity.ProfileUser_Activity"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
